fix cartForm layout bug

--- a/client/src/styles/component.module.less
+++ b/client/src/styles/component.module.less
@@ -62,6 +62,8 @@
 }
 
 .cartItemsListContainer {
+	min-height: 460px;
+	min-width: 930px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 }
@@ -74,6 +76,18 @@
 	padding: 10px;
 	border: 1px solid @containerBorderColor;
 	border-radius: @containerBorderRadius;
+}
+
+.cartEmptyContaier {
+	min-height: 460px;
+	min-width: 930px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.cartEmptyTitle {
+	font-size: 40px;
 }
 
 .quanityInputContainer {
@@ -106,4 +120,10 @@
 
 .totalAmountValue {
 	font-weight: 600;
+}
+
+.formCotainer {
+	padding: 20px;
+	border: 2px solid @containerBorderColor;
+	border-radius: @containerBorderRadius;
 }
